# test_skillbox

task_1/: CMakeLists.txt
task_1/source/: main.cpp
task_1/source/librobo/: IRobot.h
task_1/source/librobo/Robot2D/: Robot2D.cpp  Robot2D.h
task_1/source/librobo/Robot3D/: Robot3D.cpp  Robot3D.h
task_2/: test_a.cpp  test_b.cpp  test_c.cpp  test_d.cpp  test_e.cpp
